@@ -41,6 +41,8 @@ fixed bugs:
 - fixed numerical bug in conflict analysis of genvbounds propagator
 - relaxed assert in SCIPvarCh{Lb,Ub}{Global,Local} that new bound must be tighter to feastol
 - fixed bug in heur_subnlp running with tightened tolerances: sumepsilon must be tightened like feastol and epsilon
+- fixed contra-intuitive behavior when using SCIP with objective limits and solution limit at the same time;
+  SCIP now only stops when sufficiently many solutions better than the objective limit have been found
 
 performance improvements:
 - also copying active tight cuts from the delayed cut pool when calling SCIPcopyCuts()
@@ -48,8 +50,11 @@ performance improvements:
 features:
 - added delayed cutpool which only get separated if the sepastore is empty after a separation round
 
-interface
+interface:
 - fixed spelling in the method name SCIPgmlWriteClosing()
+- new method SCIPgetNLimSolsFound() to get number of solutions that respect the objective limit
+- when using an objective limit, heuristic characters are not displayed any longer for worse solutions
+- statistics now include output on number of solutions that respect objective limit
 
 SCIP version 3.0.0
 ==================
